<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_photo_library_24"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_upgrade"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/premium" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/feedback_amp_support" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/privacy_statements" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>