<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profiles"
        android:icon="@drawable/ic_baseline_adjust_24"
        android:enabled="true"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:enabled="true"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:enabled="true"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:enabled="true"
        android:title="@string/fav" />


    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/account"
        android:enabled="true"
        />

</menu>