<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Profile_Frags.Welcome">
<RelativeLayout
    android:id="@+id/page1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/pages" />

    <TextView
        android:id="@+id/welcome"
        style="@style/Title_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/welcome" />

    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        />
    <TextView
        style="@style/big_title_black"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/welcome_content" />

    <Button
        android:id="@+id/next1"
        style="@style/colored_custom_butt_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        />
</RelativeLayout>

</FrameLayout>