<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.Profile_Frags.GenderSelection">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/genderProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:trackColor="@color/white"
                android:layout_alignTop="@+id/page2"/>


            <LinearLayout
                android:id="@+id/page2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mons_reg"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">
                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mons_reg"
                    android:text="@string/male"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:fontFamily="@font/mons_reg"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
                <RadioButton
                    android:id="@+id/transRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transgender"
                    android:fontFamily="@font/mons_reg"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
                <RadioButton
                    android:id="@+id/otherRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:fontFamily="@font/mons_reg"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

            </RadioGroup>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gender_saver"
                style="@style/colored_custom_butt_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:tint="@color/white"
                android:layout_gravity="end|bottom"
                android:layout_margin="8dp"
                android:layout_alignBottom="@+id/page2"
                android:layout_alignEnd="@+id/page2"
                />
        </RelativeLayout>
</FrameLayout>